Created a csvwriter class to make it easier to export frametimes and objects in view, needs some tweaking since the frametimes are apparantly all 0

--- a/_vs2015/mge.vcxproj
+++ b/_vs2015/mge.vcxproj
@@ -189,6 +189,7 @@
     <ClInclude Include="..\src\mge\util\DebugHud.hpp" />
     <ClInclude Include="..\src\mge\util\ShaderUtil.h" />
     <ClInclude Include="CameraBehaviour.hpp" />
+    <ClInclude Include="Classes\CSVwriter.hpp" />
     <ClInclude Include="Classes\Frustum.hpp" />
     <ClInclude Include="Classes\Plane.hpp" />
     <ClInclude Include="Classes\WorldGen.hpp" />
@@ -217,6 +218,7 @@
     <ClCompile Include="..\src\mge\util\DebugHud.cpp" />
     <ClCompile Include="..\src\mge\util\ShaderUtil.cpp" />
     <ClCompile Include="CameraBehaviour.cpp" />
+    <ClCompile Include="Classes\CSVwriter.cpp" />
     <ClCompile Include="Classes\Frustum.cpp" />
     <ClCompile Include="Classes\Plane.cpp" />
     <ClCompile Include="Classes\WorldGen.cpp" />
